# clankeRS

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  ros2.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: clankersConfig.cmake.in
cpp/examples/: minimal_inference.cpp  zero_alloc_loop.cpp
cpp/include/clankers/: clankers.h  clankers.hpp  engine.hpp  error.hpp  stats.hpp  tensor.hpp
cpp/include/clankers/detail/: span.hpp
cpp/src/: engine.cpp  error.cpp  stats.cpp  tensor.cpp
crates/clankers/: Cargo.toml  README.md
crates/clankers-cli/: Cargo.toml  README.md  build.rs
crates/clankers-cli/src/: lib.rs  main.rs
crates/clankers-cli/src/commands/: add_model.rs  bench.rs  compare.rs  demo.rs  import_pytorch.rs  inspect.rs  latency.rs  mod.rs  new_project.rs  record.rs  replay.rs  run.rs  test.rs  validate_model.rs  visualize.rs
crates/clankers-cli/tests/: bench.rs
crates/clankers-core/: Cargo.toml  README.md
crates/clankers-core/src/: config.rs  context.rs  error.rs  latency.rs  lib.rs  types.rs
crates/clankers-core/tests/: config_context.rs  primitives.rs
crates/clankers-data/: Cargo.toml  README.md
crates/clankers-data/src/: compare.rs  inspect.rs  lib.rs  log.rs  replay.rs  sample.rs  writer.rs
crates/clankers-data/tests/: mcap_roundtrip.rs
crates/clankers-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/clankers-ffi/src/: engine.rs  error.rs  ffi_types.rs  lib.rs  panic.rs  stats.rs  tensor.rs  types.rs
crates/clankers-ffi/tests/: c_api.rs  c_header_smoke.c
crates/clankers-geometry/: Cargo.toml  README.md
crates/clankers-geometry/src/: lib.rs  pose.rs  transform.rs  twist.rs
crates/clankers-geometry/tests/: geometry.rs
crates/clankers-macros/: Cargo.toml  README.md
crates/clankers-macros/src/: lib.rs
crates/clankers-ml/: Cargo.toml  README.md
crates/clankers-ml/src/: backend.rs  lib.rs  model.rs  validation.rs
crates/clankers-ml/src/backend/: capability.rs  mod.rs  noop.rs  onnxruntime.rs  spec.rs  tensor.rs  traits.rs
crates/clankers-ml/src/inference/: builder.rs  config.rs  engine.rs  error.rs  mod.rs  model.rs  named_outputs.rs  profile.rs  runtime.rs  session.rs
crates/clankers-ml/tests/: inference.rs  onnx_engine.rs  onnx_fixtures.rs
crates/clankers-ml/tests/fixtures/onnx/: dynamic_batch_identity.onnx  identity_i64.onnx  identity_u8.onnx  one_input_two_outputs.onnx  policy_multi_input_image_state.onnx  policy_single_f32.onnx  two_inputs_one_output.onnx
crates/clankers-ros2/: Cargo.toml  README.md  package.xml
crates/clankers-ros2/src/: lib.rs  message.rs  node.rs  qos.rs  rclrs_backend.rs  sim.rs
crates/clankers-ros2/src/bridge/: image.rs  mod.rs
crates/clankers-ros2/tests/: messages.rs  sim_pubsub.rs
crates/clankers-runtime/: Cargo.toml  README.md
crates/clankers-runtime/src/: lib.rs  metrics.rs  runtime.rs
crates/clankers-runtime/tests/: runtime.rs
crates/clankers-tensor/: Cargo.toml  README.md
crates/clankers-tensor/src/: arena.rs  buffer.rs  device.rs  dtype.rs  error.rs  image.rs  layout.rs  lib.rs  owned.rs  pointcloud.rs  shape.rs  view.rs
crates/clankers-tensor/src/adapters/: image.rs  mod.rs  state.rs
crates/clankers-tensor/src/pipeline/: mod.rs  transforms.rs
crates/clankers-tensor/tests/: image_pipeline.rs
crates/clankers-testing/: Cargo.toml  README.md
crates/clankers-testing/src/: assertions.rs  context.rs  lib.rs
crates/clankers-testing/tests/: replay.rs
crates/clankers/examples/: camera_replay.rs
crates/clankers/src/: lib.rs  prelude.rs
crates/clankers/tests/: end_to_end.rs  templates_compile.rs
docs/: architecture.md  camera_perception_tutorial.md  deployment.md  getting_started.md  installation.md  mcap_replay.md  model_validation.md  pytorch_to_onnx.md  roadmap.md  ros2_integration.md  testing.md
examples/camera_perception_node/: Cargo.toml
examples/camera_perception_node/src/: main.rs
examples/ros2_pubsub_minimal/: Cargo.toml
examples/ros2_pubsub_minimal/src/: main.rs
hello_robot/: Cargo.toml  README.md  clankeRS.toml
ros2/: README.md
ros2/clankers-ros2-dds/: Cargo.toml  package.xml
ros2/clankers-ros2-dds/src/: lib.rs  rclrs_backend.rs
ros2/clankers-ros2-dds/src/bridge/: image.rs  mod.rs
ros2/pubsub_minimal_dds/: Cargo.toml  package.xml
ros2/pubsub_minimal_dds/src/: main.rs
sample_data/: camera_log.mcap
sample_data/detector_inputs/: expected_output.json
sample_data/models/: detector.onnx  policy.onnx
sample_data/policy_inputs/: expected_output.json  input.json
scripts/: build_cpp_sdk.sh  export_pytorch_to_onnx.py  make_demo_gif.py  make_onnx_fixtures.py  make_sample_models.py  open_issues.sh  setup_ros2_ws.sh  simple_classifier.py  validate_pytorch_vs_onnx.py
templates/basic_node/: README.md  clankeRS.toml
templates/basic_node/src/: main.rs
templates/ml_inference_node/: Cargo.toml  clankeRS.toml
templates/ml_inference_node/src/: main.rs
templates/perception_node/: Cargo.toml  README.md  clankeRS.toml
templates/perception_node/src/: main.rs
templates/replay_test_node/: Cargo.toml  clankeRS.toml
templates/replay_test_node/src/: main.rs
