[workspace]
resolver = "2"
members = [
    "crates/clankers",
    "crates/clankers-core",
    "crates/clankers-cli",
    "crates/clankers-ros2",
    "crates/clankers-data",
    "crates/clankers-ml",
    "crates/clankers-tensor",
    "crates/clankers-testing",
    "crates/clankers-macros",
    "crates/clankers-geometry",
    "crates/clankers-runtime",
    "crates/clankers-ffi",
    "examples/ros2_pubsub_minimal",
    "examples/camera_perception_node",
]
# The real rclrs/DDS packages live under ros2/ and are built by colcon inside a
# ROS workspace (see docs/ros2_integration.md), never by `cargo build`. They are
# excluded so they resolve as standalone packages (their ROS message-crate deps
# are yanked on crates.io and would break the ROS-free workspace build).
exclude = [
    "ros2/clankers-ros2-dds",
    "ros2/pubsub_minimal_dds",
]
default-members = ["crates/clankers-cli", "crates/clankers"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/PvRao-29/clankeRS"
homepage = "https://github.com/PvRao-29/clankeRS"
authors = ["Pranshu Rao"]

[workspace.dependencies]
# Internal crates carry an explicit version alongside the path so the workspace
# stays publish-ready (a bare path dep reads as a `*` wildcard, which can't be
# published). Keep these in sync with [workspace.package] version.
clankers = { path = "crates/clankers", version = "0.1.4" }
clankers-core = { path = "crates/clankers-core", version = "0.1.4" }
clankers-cli = { path = "crates/clankers-cli", version = "0.1.4" }
clankers-ros2 = { path = "crates/clankers-ros2", version = "0.1.4" }
clankers-data = { path = "crates/clankers-data", version = "0.1.4" }
clankers-ml = { path = "crates/clankers-ml", version = "0.1.4" }
clankers-tensor = { path = "crates/clankers-tensor", version = "0.1.4" }
clankers-testing = { path = "crates/clankers-testing", version = "0.1.4" }
clankers-macros = { path = "crates/clankers-macros", version = "0.1.4" }
clankers-geometry = { path = "crates/clankers-geometry", version = "0.1.4" }
clankers-runtime = { path = "crates/clankers-runtime", version = "0.1.4" }
clankers-ffi = { path = "crates/clankers-ffi", version = "0.1.4" }

anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
mcap = "0.23"
ndarray = { version = "0.17", features = ["std"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "ndarray", "tls-native", "std"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["union"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
