[package]
name = "clankers-data"
description = "MCAP logging, replay, and inspection for clankeRS"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
clankers-core.workspace = true
mcap.workspace = true
serde.workspace = true
serde_json.workspace = true
clankers-ros2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
