[package]
name = "clankers-geometry"
description = "Robotics math, transforms, and frames for clankeRS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clankers-core.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
