[package]
name = "clankers-ros2"
description = "ROS 2 integration layer for clankeRS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["sim"]
sim = []
ros2 = []

[dependencies]
async-trait.workspace = true
clankers-core.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
