[package]
name = "clankers-ros2"
description = "ROS 2 integration layer for clankeRS (ROS-free shared core: sim backend + message/QoS types)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
clankers-core.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

# NOTE: the real rclrs/DDS backend and the ROS message-crate deps (rclrs,
# sensor_msgs, std_msgs, builtin_interfaces) are deliberately NOT here — those
# crates are yanked/absent on crates.io and would break the ROS-free
# `cargo build`. They live in the colcon package ros2/clankers-ros2-dds, which
# path-depends on this crate for the shared message/QoS types. See
# docs/ros2_integration.md.
