<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  colcon/ament manifest for building clankers-ros2 with the `ros2` feature.

  colcon-ros-cargo reads these <depend> entries and injects the generated ROS
  message crates (sensor_msgs, std_msgs, builtin_interfaces) into the cargo
  build, so they are deliberately NOT in Cargo.toml (they are not on crates.io
  and would break the ROS-free `cargo build`). See docs/ros2_integration.md.
-->
<package format="3">
  <name>clankers-ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 (rclrs/DDS) integration layer for clankeRS</description>
  <maintainer email="29.pranshurao@gmail.com">Pranshu Rao</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
