[package]
name = "clankers-runtime"
description = "Execution, scheduling, and observability for clankeRS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clankers-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
