[package]
name = "clankers-tensor"
description = "Robotics-focused tensor utilities for clankeRS"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-ros2.workspace = true
ndarray.workspace = true
thiserror.workspace = true
