[package]
name = "camera_perception_node"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clankers = { path = "../../crates/clankers" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# This example runs on the in-memory sim bus (it feeds itself synthetic frames).
# For a real ROS 2 graph, see the colcon packages under ros2/ and
# docs/ros2_integration.md.
