[package]
name = "ros2_pubsub_minimal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clankers = { path = "../../crates/clankers" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[features]
# Build against a real ROS 2 graph (colcon only):
#   cargo build -p ros2_pubsub_minimal --features ros2
ros2 = ["clankers/ros2"]
