[package]
name = "ros2_pubsub_minimal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clankers = { path = "../../crates/clankers" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# This example uses the in-memory sim bus. The real-DDS equivalent is the colcon
# package ros2/pubsub_minimal_dds (see docs/ros2_integration.md).
