<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  colcon/ament manifest for the minimal real-DDS publisher example. It depends on
  clankers-ros2-dds (a path dep, so not listed here) and, transitively, on the
  ROS message crates that colcon-ros-cargo injects. See ros2/README.md.
-->
<package format="3">
  <name>pubsub_minimal_dds</name>
  <version>0.1.0</version>
  <description>Minimal clankeRS publisher on a real ROS 2 (rclrs/DDS) graph</description>
  <maintainer email="29.pranshurao@gmail.com">Pranshu Rao</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
